Added the navigation bar to the application. Still lots more to-do.

--- a/src/Pubs.UI/wwwroot/css/site.css
+++ b/src/Pubs.UI/wwwroot/css/site.css
@@ -1,4 +1,8 @@
-﻿
+﻿body {
+    background-color: #444444;
+    color: #ffffff;
+}
+
 
 .footer {
     position: absolute;
@@ -8,6 +12,11 @@
     line-height: 60px; 
 }
 
+
 .footer-version {
     margin-right: auto !important;
+}
+
+.color-white {
+    color: #fff;
 }
