--- a/src/Pubs.UI/Views/Home/Index.cshtml
+++ b/src/Pubs.UI/Views/Home/Index.cshtml
@@ -6,12 +6,15 @@
 
 
 <div class="text-center">
+    
+    
+    
     <h1>Pubs</h1>
     <environment exclude="Production,Development">
-        <h2><span class="badge badge-warning">@WebHostEnvironment.EnvironmentName Server</span></h2>
+        <h2><span class="badge bg-warning">@WebHostEnvironment.EnvironmentName Server</span></h2>
     </environment>
     <environment include="Development">
-        <h2><span class="badge badge-danger">@WebHostEnvironment.EnvironmentName Server</span></h2>
+        <h2><span class="badge bg-danger">@WebHostEnvironment.EnvironmentName Server</span></h2>
     </environment>
 </div>
 
