lots and lots of work for the week #2 effort.

--- a/src/Pubs.UI.Angular/src/app/app.component.css
+++ b/src/Pubs.UI.Angular/src/app/app.component.css
@@ -10,7 +10,7 @@
 .navbar-nav .nav-item.active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
     font-weight: bold;
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
 }
 
 .pubs-nav-bar ul li {
