--- a/src/Pubs.UI.Angular/src/app/home/home.component.html
+++ b/src/Pubs.UI.Angular/src/app/home/home.component.html
@@ -22,7 +22,7 @@
                 </h5>
                 <p class="card-text">Enter the editors module to perform tasks like adding or editing authors and
                     titles. </p>
-                <a href="#" class="stretched-link"></a>
+                <a [routerLink]="['/editors']" class="stretched-link"></a>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
                 </h5>
                 <p class="card-text">Enter the sales module to perform tasks like adding or editing book sale prices and
                     recoding book sales. </p>
-                <a href="#" class="stretched-link"></a>
+                <a [routerLink]="['/sales']"  class="stretched-link"></a>
             </div>
         </div>
 
@@ -51,7 +51,7 @@
                     </span>
                 </h5>
                 <p class="card-text">Enter the HR module to perform tasks like adding or editing salespeople</p>
-                <a href="#" class="stretched-link"></a>
+                <a [routerLink]="['/hr']"  class="stretched-link"></a>
             </div>
         </div>
 
@@ -65,7 +65,7 @@
                     </span>
                 </h5>
                 <p class="card-text">Enter the reports module to perform data mining across the enterprise.</p>
-                <a href="#" class="stretched-link"></a>
+                <a [routerLink]="['/reports']"  class="stretched-link"></a>
             </div>
         </div>
 
@@ -79,7 +79,7 @@
                     </span>
                 </h5>
                 <p class="card-text">Enter the admin module to perform tasks like adding, editing, or deactiving users. </p>
-                <a href="#" class="stretched-link"></a>
+                <a [routerLink]="['/admin']" class="stretched-link"></a>
             </div>
         </div>
 
