--- a/src/Pubs.UI.Angular/src/styles.css
+++ b/src/Pubs.UI.Angular/src/styles.css
@@ -14,3 +14,5 @@ body {
     text-align: left;
     background-color: #ebedef;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
