Remove material design & try to fix routing

--- a/src/Pubs.UI.Angular/src/app/editors/home/editor.component.html
+++ b/src/Pubs.UI.Angular/src/app/editors/home/editor.component.html
@@ -10,7 +10,7 @@
                   </span>
               </h5>
               <p class="card-text"> </p>
-              <!-- <a [routerLink]= "['/editors/authors']" class="stretched-link"></a> -->
+              <a [routerLink]= "['/editors/authors']" class="stretched-link"></a>
               <a class="stretched-link"></a>
           </div>
       </div>
