--- a/src/Pubs.UI.Angular/src/app/editors/authors/author-edit/author-edit.component.html
+++ b/src/Pubs.UI.Angular/src/app/editors/authors/author-edit/author-edit.component.html
@@ -2,28 +2,30 @@
     <div class="card-header">
         <h2> {{pageTitle}} </h2>
     </div>
-    <div class="card-body" *ngIf="author">
-        <form class="row g-2 m-2" (ngSubmit)="saveAuthor()" #authorForm="ngForm">
+    <!-- Reactive Form -->
+
+    <div class="card-body">
+        <form class="row g-2 m-2" [formGroup]="authorEditForm" (ngSubmit)="saveAuthor()">
+
+            <input type="hidden" class="form-control" id="txtAuthorId" formControlName="id" name="id" [attr.hidden]="true" />
+
             <section>
                 <h3>Demographics</h3>
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <label for="txtFirstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="txtFirsttName" [(ngModel)]="author.firstName"
-                            name="firstName" #firstName="ngModel" />
+                        <input type="text" class="form-control" id="txtFirstName" formControlName="firstName" name="firstName" />
                     </div>
+
                     <div class="col-md-6">
-                        <label for="txtLastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="txtLastName" [(ngModel)]="author.lastName"
-                            name="lastName" #lastName="ngModel" />
+                        <label for="txtLastName" class="form-label">Last Name</label>                        
+                        <input type="text" class="form-control" id="txtLastName" formControlName="lastName" name="lastName" />
                     </div>
                 </div>
-
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <label for="txtAuthorCode" class="form-label">Author Code</label>
-                        <input type="text" class="form-control" id="txtAuthorCode" [(ngModel)]="author.authorCode"
-                                name="authorCode" #authorCode="ngModel" readonly />
+                        <input type="text" class="form-control" id="txtAuthorCode" formControlName="authorCode" name="authorCode" readonly />
                     </div>
                 </div>
             </section>
@@ -33,15 +35,13 @@
                 <div class="row mt-3">
                     <div class="col-12">
                         <label for="txtAddress" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="txtAddress" [(ngModel)]="author.address"
-                        name="address" #address="ngModel" >
+                        <input type="text" class="form-control" id="txtAddress" formControlName="address" name="address" >
                     </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <label for="txtCity" class="form-label">City</label>
-                        <input type="text" class="form-control" id="txtCity" [(ngModel)]="author.city"
-                        name="city" #city="ngModel" >
+                        <input type="text" class="form-control" id="txtCity" formControlName="city" name="city" >
                     </div>
                     <div class="col-md-4">
                         <label for="selectState" class="form-label">State</label>
@@ -52,15 +52,13 @@
                     </div>
                     <div class="col-md-2">
                         <label for="txtZip" class="form-label">Zip</label>
-                        <input type="text" class="form-control" id="txtZip" [(ngModel)]="author.zipCode"
-                        name="zipCode" #zipCode="ngModel" >
+                        <input type="text" class="form-control" id="txtZip" formControlName="zipCode" name="zipCode" >
                     </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <label for="txtPhone" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="txtPhone" [(ngModel)]="author.phoneNumber"
-                        name="phoneNumber" #phoneNumber="ngModel">
+                        <input type="text" class="form-control" id="txtPhone" formControlName="phoneNumber" name="phoneNumber">
                     </div>
                 </div>
             </section>
@@ -70,12 +68,37 @@
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <label for="selectIsUnderContract" class="form-label">Is Under Contract?</label>
-                        <input type="text" class="form-control" id="txtIsUnderContract" readonly 
-                                [ngModel] = "author.contract | yesNo" 
-                                [ngModelOptions]="{standalone: true}" />
+                        <select id="selectIsUnderContract" class="form-select" readonly formControlName="contract" name="contract" [attr.disabled]="true" >
+                            <option value='true'>Yes</option>
+                            <option value='false'>No</option>                            
+                        </select>
                     </div>
                 </div>
-            </section>
+            </section>            
+
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <button class="btn btn-outline-primary me-3" type="button"
+                        title="Save your entered data" [disabled]="!isValid()" (click)="saveAuthor()">
+                        Save
+                    </button>
+
+                    <button class="btn btn-outline-secondary me-3" type="button"
+                        title="Cancel your edits" [routerLink]="['/editors/authors']">
+                        Cancel
+                    </button>
+
+                </div>
+            </div>
+
+        </form>
+    </div>
+
+    <!-- Template Driven Form -->
+    <br />
+    <!-- <div class="card-body" *ngIf="author">
+        <form class="row g-2 m-2" (ngSubmit)="saveAuthor()" #authorForm="ngForm">
+            
 
             <div class="row mt-4">
                 <div class="col-md-4">
@@ -91,5 +114,7 @@
                 </div>
             </div>
         </form>
-    </div>
+    </div> -->
+
+
 </div>
