Move to SCSS files for bootstrap. Moved back to some view models in angular & added some bootstrap fun

--- a/src/Pubs.UI.Angular/src/app/app.component.html
+++ b/src/Pubs.UI.Angular/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-custom navbar-dark" id="pubs-nav-bar"
+<nav class="navbar sticky-top navbar-expand-lg bg-facebook navbar-dark" id="pubs-nav-bar"
   aria-label="Main Navigation">
   <div class="container-fluid">
     <a class="navbar-brand color-white" href="#" id="pubs-nav-bar-brand">
