--- a/src/Pubs.UI.Angular/src/app/editors/authors/author-detail/author-detail.component.html
+++ b/src/Pubs.UI.Angular/src/app/editors/authors/author-detail/author-detail.component.html
@@ -1,7 +1,9 @@
 <div class="card mt-1">
-    <div class="card-header">
-        <h2> {{pageTitle}} </h2>
+    
+    <div class="card-header text-white bg-linkedin fs-5" role="heading" aria-level="1">
+        <i class="fas fa-user fa-lg me-2"></i><span>{{pageTitle}}</span>
     </div>
+
     <div class="card-body" *ngIf="author">
         <form class="row g-2 m-2">
             <section>
