--- a/src/Pubs.UI.Angular/src/app/editors/authors/author-list.component.html
+++ b/src/Pubs.UI.Angular/src/app/editors/authors/author-list.component.html
@@ -1,40 +1,78 @@
-<div class="card">
+<div class="row">
+  <div class="col-md-12">
+    <div class="card">
 
-  <div class="card-body">
-    <div class="table-responsive ">
-      <table class="table table-striped table-hover align-middle mb-0" *ngIf="authors && authors.length">
-        <thead>
-          <tr class="table-primary">
-            <th class="text-center">Author Code</th>
-            <th class="text-center">Author Name</th>
-            <th class="text-center">Phone</th>
-            <th class="text-center">Under Contract?</th>
-            <th class="text-center">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let author of authors">
-            <td class="text-center">
-              <a >
-                {{ author.authorCode }}
-              </a>
-            </td>
-            <td class="text-center">{{ author.name }}</td>
-            <td class="text-center">{{ author.phoneNumber }}</td>
-            <td class="text-center fw-bold" 
-                [ngClass]="{'text-success' : author.contract== true, 'text-danger' : author.contract == false }" >
-              {{ author.contract | yesNo }}
-            </td>
-            <td class="text-center">
-              <span>
-                <button class="btn btn-primary me-3" [routerLink]="['/editors/authors', author.id]">Details</button>
-                
-                <button class="btn btn-success" [routerLink]="['/editors/authors', author.id, 'edit']"> Edit  </button>
-              </span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="card-header text-white bg-linkedin fs-5" role="heading" aria-level="1">
+        <i class="fas fa-users fa-lg me-2"></i><span>Authors</span>
+      </div>
+      <div class="card-body">
+
+        <div class="d-flex justify-content-end">
+          <p>
+            <a class="btn btn-success" title="Create new author">
+              <i class="fas fa-user-plus me-2"></i><span class="float-right">Create New</span>
+            </a>
+          </p>
+        </div>
+        <div class="table-responsive ">
+          <table class="table table-striped table-hover align-middle" *ngIf="authors$ | async as authors">
+            <thead>
+              <tr class="bg-linkedin text-white fs-6">
+                <th class="text-center fw-normal">Author Code</th>
+                <th class="text-center fw-normal">Author Name</th>
+                <th class="text-center fw-normal">Phone</th>
+                <th class="text-center fw-normal">Under Contract?</th>
+                <th class="text-center fw-normal"><i class="fas fa-tools me-2"></i></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let author of authors">
+                <td class="text-center">
+                  <a>
+                    {{ author.authorCode }}
+                  </a>
+                </td>
+                <td class="text-center">{{ author.name }}</td>
+                <td class="text-center">{{ author.phoneNumber }}</td>
+                <td class="text-center fw-bold"
+                  [ngClass]="{'text-success' : author.isAuthorUnderContract== true, 'text-danger' : author.isAuthorUnderContract == false }">
+                  {{ author.isAuthorUnderContract | yesNo }}
+                </td>
+                <td class="text-center">
+                  <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="splitAction"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Actions
+                    </button>
+                    <ul class="dropdown-menu " aria-labelledby="splitAction">
+                      <li>
+                        <a class="dropdown-item text-primary"
+                          [routerLink]="['/editors/authors', author.authorId]">
+                          Details
+                        </a>
+                      </li>
+                      <li>
+                        <a  class="dropdown-item text-success" 
+                            [routerLink]="['/editors/authors', author.authorId, 'edit']">
+                          Edit
+                        </a>
+                      </li>
+                      <li>
+                          <a class="dropdown-item text-danger">
+                              Delete
+                          </a>
+                      </li>
+                    </ul>
+                  </div>
+
+
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
